LX多言語対応

--- a/Share Beauty App/Base.lproj/LuxuryFiveSecretsTopViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LuxuryFiveSecretsTopViewController.storyboard
@@ -103,6 +103,7 @@
                         <outlet property="mNavigationView" destination="6Ij-pp-yD4" id="9F4-Vr-yG4"/>
                         <outlet property="mScrollV" destination="qTc-4f-LWm" id="wkY-2y-kKc"/>
                         <outlet property="mVContent" destination="pWj-xg-XyB" id="Eft-RX-lkZ"/>
+                        <outlet property="topTitleLabel" destination="76o-kn-hhD" id="hPT-hh-f7m"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lWD-YL-egd" userLabel="First Responder" sceneMemberID="firstResponder"/>
