--- a/Share Beauty App/Views/WASOPeelFirstEfficacyResultView.xib
+++ b/Share Beauty App/Views/WASOPeelFirstEfficacyResultView.xib
@@ -19,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="EEEFirstEfficacyResultView" customClass="EEEFirstEfficacyResultView" customModule="Share_Beauty_App" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="WASOPeelEfficacyResultView" customClass="WASOPeelFirstEfficacyResultView" customModule="Share_Beauty_App" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="1024" height="550"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -29,24 +29,28 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7XS-DI-EjM">
                             <rect key="frame" x="0.0" y="0.0" width="1024" height="550"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="18aw_90.png" translatesAutoresizingMaskIntoConstraints="NO" id="wb1-hT-S9g" userLabel="Second Image View">
-                                    <rect key="frame" x="325" y="155" width="150" height="150"/>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="waso_91.png" translatesAutoresizingMaskIntoConstraints="NO" id="wb1-hT-S9g" userLabel="Second Image View">
+                                    <rect key="frame" x="325" y="203" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="18aw_90.png" translatesAutoresizingMaskIntoConstraints="NO" id="ncq-AI-1vT" userLabel="Third Image View">
-                                    <rect key="frame" x="766" y="156" width="150" height="150"/>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="waso_87.png" translatesAutoresizingMaskIntoConstraints="NO" id="ncq-AI-1vT" userLabel="Third Image View">
+                                    <rect key="frame" x="766" y="204" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="18aw_94.png" translatesAutoresizingMaskIntoConstraints="NO" id="nkX-A1-qtL" userLabel="Second Image View">
-                                    <rect key="frame" x="109" y="156" width="150" height="150"/>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="waso_92.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nkX-A1-qtL" userLabel="Second Image View">
+                                    <rect key="frame" x="109" y="204" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="18aw_90.png" translatesAutoresizingMaskIntoConstraints="NO" id="5nH-zm-L8n" userLabel="Third Image View">
-                                    <rect key="frame" x="544" y="155" width="150" height="150"/>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="waso_570.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BWh-jr-vgq" userLabel="Second Image View">
+                                    <rect key="frame" x="226" y="28" width="150" height="150"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="waso_92.png" translatesAutoresizingMaskIntoConstraints="NO" id="5nH-zm-L8n" userLabel="Third Image View">
+                                    <rect key="frame" x="544" y="203" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QhE-k6-j2k">
-                                    <rect key="frame" x="92" y="314" width="184" height="81"/>
+                                    <rect key="frame" x="92" y="362" width="184" height="81"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <string key="text">It penetrated 
 immediately.</string>
@@ -55,7 +59,7 @@ immediately.</string>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8N0-Z4-KTe">
-                                    <rect key="frame" x="308" y="314" width="184" height="81"/>
+                                    <rect key="frame" x="308" y="362" width="184" height="81"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <string key="text">The eye area became 
 smoother.</string>
@@ -64,7 +68,7 @@ smoother.</string>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UMe-hr-OJ6">
-                                    <rect key="frame" x="527" y="314" width="184" height="81"/>
+                                    <rect key="frame" x="527" y="362" width="184" height="81"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <string key="text">The eye area became 
 more moisturized.</string>
@@ -73,7 +77,7 @@ more moisturized.</string>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qhd-M6-mGQ">
-                                    <rect key="frame" x="749" y="314" width="184" height="81"/>
+                                    <rect key="frame" x="749" y="362" width="184" height="81"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <string key="text">I feel my eye area 
 became more vibrant.</string>
@@ -81,22 +85,20 @@ became more vibrant.</string>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Immediately after use" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t4G-3H-tog">
-                                    <rect key="frame" x="341" y="28" width="342" height="59"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="23"/>
-                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FoE-n2-ghg">
-                                    <rect key="frame" x="8" y="414" width="703" height="83"/>
+                                    <rect key="frame" x="8" y="430" width="586" height="83"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <string key="text">Test Site: France
-Test Period: June – July 2017
-Target: Women aged 25 – 37 who use eye cream and use digital devices more than 10 hours a day 
-Sample: 110</string>
+                                    <string key="text">※Tested country: Singapore    Subject:100Asian(Singaporean)females,agefrom20 y.o.trough30y.o    Tested term:From 24/10/2017 to 27/10/2017</string>
                                     <fontDescription key="fontDescription" name="Reader-Medium" family="Reader" pointSize="12"/>
                                     <color key="textColor" red="0.53719413279999995" green="0.53728991749999999" blue="0.5371881127" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t4G-3H-tog">
+                                    <rect key="frame" x="369" y="69" width="591" height="68"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <string key="text">Users were very satisfied with the changein their skin and how fun it was to use</string>
+                                    <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="23"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -133,7 +135,9 @@ Sample: 110</string>
         </view>
     </objects>
     <resources>
-        <image name="18aw_90.png" width="298" height="299"/>
-        <image name="18aw_94.png" width="298" height="299"/>
+        <image name="waso_570.png" width="178" height="359"/>
+        <image name="waso_87.png" width="321" height="320"/>
+        <image name="waso_91.png" width="321" height="320"/>
+        <image name="waso_92.png" width="321" height="320"/>
     </resources>
 </document>
